[tool.poetry]
name = "job-parser"
version = "0.1.0"
description = ""
authors = ["slivapy <faer2325@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
